# play-with-wgpu

./: .gitignore  Cargo.toml  build.rs  readme.md
examples/: linear.rs  simple.rs
shaders/: sgemm1.comp  sgemm1.spv
src/: lib.rs  main.rs  tensor.rs
