[package]
name = "play-with-webgpu"
version = "0.1.0"
authors = ["alykhouzov"]
edition = "2018"

[lib]
path = 'src/lib.rs'
crate-type = ['rlib']

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", branch = "master" }
lazy_static = "1.4.0"
rand = "0.7.3"
zerocopy = "0.3"
futures = "0.3"
glsl-to-spirv = "0.1"
env_logger = "0.7"
log = "0.4"

[build-dependencies]
glsl-to-spirv = "0.1"
